everything is fixed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="about-image">
                     <div class="about-card">
-                        <img src="/images/myimg.jpeg" alt="About Image" class="about-img">
+                        <img src="images/myimg.jpeg" alt="About Image" class="about-img">
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                 <div class="project-card" data-project="devfolio">
                     <div class="project-image">
                                             <div class="about-image">
-                        <img src="/images/Portfolio.png" alt="Laptop Code Icon">
+                        <img src="images/Portfolio.png" alt="Laptop Code Icon">
                     </div>
                         <div class="project-overlay">
                             <button class="view-project-btn">
@@ -210,7 +210,7 @@
                             <span>Framer Motion</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/rakeshkushwaha332/rakeshkushwaha" class="project-link"><i class="fab fa-github"></i> Code</a>
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                 <div class="project-card" data-project="wonderlust">
                     <div class="project-image">
                          <div class="about-image">
-                        <img src="/images/Homepage.png" alt="Laptop Code Icon">
+                        <img src="images/Homepage.png" alt="Laptop Code Icon">
                     </div>
                         <div class="project-overlay">
                             <button class="view-project-btn">
@@ -244,7 +244,7 @@
                 <div class="project-card" data-project="agristack">
                     <div class="project-image">
                          <div class="about-image">
-                        <img src="/images/agrifusion_about.png" alt="Laptop Code Icon">
+                        <img src="images/agrifusion_about.png" alt="Laptop Code Icon">
                     </div>
                         <div class="project-overlay">
                             <button class="view-project-btn">
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>AgriStack – Open Source Agriculture Platform</h3>
+                        <h3>AgriFusion – Open Source Agriculture Platform</h3>
                         <p>A MERN stack web app developed during Hackaton to empower farmers through digitized agricultural data and services.</p>
                         <div class="project-tech">
                             <span>EJS</span>
@@ -262,7 +262,7 @@
                             <span>MongoDB</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/simmi-verma/AgriFusion" class="project-link"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/rakeshkushwaha332/AgriFusion" class="project-link"><i class="fab fa-github"></i> Code</a>
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
         <div class="container">
             <h2 class="section-title">Resume</h2>
             <p>Download my resume or view my experience and education below.</p>
-            <a href="https://drive.google.com/file/d/1plMMM9pctrrPqlZkZ1bb60789rUB08YP/view?usp=sharing" class="btn btn-primary" target="_blank">Download Resume (PDF)</a>
+            <a href="https://drive.google.com/file/d/1jMnlc2zuyR6skOck-tVzkImrA5vLr3bF/view?usp=sharing" class="btn btn-primary" target="_blank">Download Resume (PDF)</a>
             <div class="resume-content">
                 <h3>Education</h3>
                 <ul>
